2008-05-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableColumn.m (-initWithCoder:): Handle NSIsEditable.

2008-05-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-encodeWithCoder:, -initWithCoder:):
	Correctly encode and decode image position in the keyed encoding case.

2008-05-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSGraphicsContext.m (-alloc, -allocWithZone:) New
	methods, use them in graphicsContextWithAttributes:.
	* Source/NSWindow.m: (-_startBackendWindow): New method for shared
	backend creation. Create the NSGraphicsContext as not
	autoreleased. Use that method in initWithWindowRef: and
	_initBackendWindow. 
	* Source/NSWindow.m: (-dealloc): Remove last hack and make a bit
	safer against reentry.
	* Source/NSWindow.m (-_terminateBackendWindow): Reorder statements.
	* Source/NSWindow.m (-initWithContentRect:...screen:): Warn about
	second call to this method.

2008-05-14 21:55-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSLayoutManager.m: Changed unsigned int to NSUInteger 
	per Fred Kiefer's suggestion.  This corrects a crash which was
	detected on 64 bit systems.

2008-05-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m: (-dealloc): Try to better cope with the
	circular reference between the window and the context.

2008-05-14 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDocumentController.m: Cope with bad values in NSRecentItems

2008-05-13 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSGlyphGenerator.h,
	* Source/NSGlyphGenerator.m: New file.
	* Source/GNUmakefile: Add new files.
	* Headers/Additions/GNUstepGUI/GSLayoutManager_internal.h: More
	efficient memory usage for glyph runs.
	* Headers/Additions/GNUstepGUI/GSLayoutManager.h: Add ivar for
	glyph generator and some MacOSX methods.
	* Source/GSLayoutManager.m: Use objc_malloc, objc_free and
	objc_realloc. Move glyph generation into seperate class. Add
	documentation. General cleanup. Implement some of the additional
	methods. 