@@ -1,3 +1,8 @@
+2008-05-21 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSAttributedString.m (-_substituteFontFor:font:fromList:): 
+	Limit the amount of character sets we cache.
+	
 2008-05-20 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSTableColumn.m (-initWithCoder:): Handle NSIsEditable.
